Bug 436667 - Pinned apps with a preferred://[something] URI that resolves to nothing should be hidden
Summary: Pinned apps with a preferred://[something] URI that resolves to nothing shoul...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.21.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
: 456600 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-06 02:15 UTC by Hesam Gholami
Modified: 2023-02-24 16:00 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.2
Sentry Crash Report:


Attachments
See Discover icon which is invalid. (21.26 KB, image/png)
2021-05-06 02:15 UTC, Hesam Gholami
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hesam Gholami 2021-05-06 02:15:56 UTC
Created attachment 138182 [details]
See Discover icon which is invalid.

SUMMARY

In some Linux distributions, you can choose what packages to install during the OS installation process.
When I was installing Arch, I didn't install Discover because I'll use pacman to install and update my packages. But anyway Plasma placed an icon of Discover in my task manager which is not installed, therefore it gets an invalid icon and title.

STEPS TO REPRODUCE
1. During OS setup, install KDE but without Discover.
2. Take a look at task manager and see invalid icon of Discover.

OBSERVED RESULT

There is an invalid icon for Discover in task manager. (Like in attachment)

EXPECTED RESULT

Discover entry should not be presented in task manager, if Discover is not installed at the first place.

SOFTWARE/OS VERSIONS

Operating System: Arch Linux
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2
Kernel Version: 5.11.16-arch1-1
OS Type: 64-bit
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-4700HQ CPU @ 2.40GHz
Memory: 7.7 GiB of RAM
Graphics Processor: Mesa DRI Intel® HD Graphics 4600

ADDITIONAL INFORMATION

N/A
Comment 1 Nate Graham 2021-05-06 16:39:09 UTC
I suppose we could try to resolve the preferred://[whatever] URI that provides this, and if it gives us nothing, don't show the icon.

In the meantime, just remove it manually.
Comment 2 Hesam Gholami 2021-05-07 00:31:19 UTC
Yea that sounds like a good solution.
I've just removed that invalid icon manually.
Thank you.
Comment 3 Nate Graham 2023-01-27 21:18:24 UTC
*** Bug 456600 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2023-02-18 04:53:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2642
Comment 5 Fushan Wen 2023-02-23 15:30:39 UTC
Git commit d6a49375b9a5832bb77dbd794b51ca4b08df278b by Fushan Wen.
Committed on 23/02/2023 at 15:14.
Pushed by fusionfuture into branch 'master'.

libtaskmanager: filter out invalid preferred launcher tasks
FIXED-IN: 5.27.1

M  +6    -0    libtaskmanager/launchertasksmodel_p.h
M  +1    -1    libtaskmanager/tasktools.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/d6a49375b9a5832bb77dbd794b51ca4b08df278b
Comment 6 Fushan Wen 2023-02-24 00:07:25 UTC
Git commit df7bc69d9f38ccd58137775019eec90db6d26dc7 by Fushan Wen.
Committed on 24/02/2023 at 00:07.
Pushed by fusionfuture into branch 'Plasma/5.27'.

libtaskmanager: filter out invalid preferred launcher tasks
FIXED-IN: 5.27.2


(cherry picked from commit d6a49375b9a5832bb77dbd794b51ca4b08df278b)

M  +6    -0    libtaskmanager/launchertasksmodel_p.h
M  +1    -1    libtaskmanager/tasktools.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/df7bc69d9f38ccd58137775019eec90db6d26dc7
Comment 7 Bug Janitor Service 2023-02-24 14:36:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2667
Comment 8 Fushan Wen 2023-02-24 15:25:01 UTC
Git commit c5dd3d5e187473fb2a9a721cfe5898b27b513b84 by Fushan Wen.
Committed on 24/02/2023 at 14:35.
Pushed by fusionfuture into branch 'master'.

libtaskmanager: test invalid preferred launchers are filtered out

M  +25   -0    libtaskmanager/autotests/tasksmodeltest.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/c5dd3d5e187473fb2a9a721cfe5898b27b513b84
Comment 9 Bug Janitor Service 2023-02-24 15:40:04 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2668
Comment 10 Fushan Wen 2023-02-24 16:00:43 UTC
Git commit 664f8bbd31cbce6f3616a9cd7c0b6e693b026e6c by Fushan Wen.
Committed on 24/02/2023 at 15:39.
Pushed by fusionfuture into branch 'Plasma/5.27'.

libtaskmanager: test invalid preferred launchers are filtered out


(cherry picked from commit c5dd3d5e187473fb2a9a721cfe5898b27b513b84)

M  +25   -0    libtaskmanager/autotests/tasksmodeltest.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/664f8bbd31cbce6f3616a9cd7c0b6e693b026e6c