libtaskmanager: filter out invalid preferred launcher tasks

BUG: 436667
FIXED-IN: 5.27.1